[gd_scene load_steps=24 format=2]

[ext_resource path="res://scripts/boss.gd" type="Script" id=1]
[ext_resource path="res://sprites/boss/boss.png" type="Texture" id=2]
[ext_resource path="res://scenes/hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://music/golem-tree_hit.mp3" type="AudioStream" id=4]
[ext_resource path="res://sprites/effects/Dust_Particle.png" type="Texture" id=5]

[sub_resource type="Animation" id=1]
resource_name = "dead"
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("particles/die:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "hurt"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "set_hitted"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "hurt_1"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 16 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "set_hitted"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "hurt_2"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 19 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "set_hitted"
} ]
}

[sub_resource type="Animation" id=5]
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 10, 9, 8 ]
}

[sub_resource type="Animation" id=6]
resource_name = "idle_1"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15, 14, 13, 12 ]
}

[sub_resource type="Animation" id=7]
resource_name = "idle_2"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19, 18, 17, 16 ]
}

[sub_resource type="Animation" id=8]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "on_boss"
} ]
}

[sub_resource type="Animation" id=9]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=10]
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 10, 9, 8 ]
}

[sub_resource type="Animation" id=11]
resource_name = "walk_1"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15, 14, 13, 12 ]
}

[sub_resource type="Animation" id=12]
resource_name = "walk_2"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19, 18, 17, 16 ]
}

[sub_resource type="CircleShape2D" id=19]
radius = 23.0

[sub_resource type="Gradient" id=14]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=15]
gradient = SubResource( 14 )

[sub_resource type="Curve" id=16]
_data = [ Vector2( 0, 0.291411 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.819018 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=17]
curve = SubResource( 16 )

[sub_resource type="ParticlesMaterial" id=18]
emission_shape = 2
emission_box_extents = Vector3( 15, 15, 1 )
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = 10.0
scale_curve = SubResource( 17 )
color_ramp = SubResource( 15 )

[node name="boss" type="KinematicBody2D"]
scale = Vector2( 2, 2 )
collision_layer = 4
collision_mask = 3
script = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 4
vframes = 9
frame = 20

[node name="animation" type="AnimationPlayer" parent="."]
autoplay = "spawn_off"
anims/dead = SubResource( 1 )
anims/hurt = SubResource( 2 )
anims/hurt_1 = SubResource( 3 )
anims/hurt_2 = SubResource( 4 )
anims/idle = SubResource( 5 )
anims/idle_1 = SubResource( 6 )
anims/idle_2 = SubResource( 7 )
anims/spawn = SubResource( 8 )
anims/spawn_off = SubResource( 9 )
anims/walk = SubResource( 10 )
anims/walk_1 = SubResource( 11 )
anims/walk_2 = SubResource( 12 )

[node name="collision_shape" type="CollisionShape2D" parent="."]
position = Vector2( 0, 13 )
shape = SubResource( 19 )
disabled = true

[node name="hitbox" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, -12 )
scale = Vector2( 0.5, 0.5 )

[node name="music" type="Node2D" parent="."]
position = Vector2( 8.33385, 0 )

[node name="hit" type="AudioStreamPlayer2D" parent="music"]
stream = ExtResource( 4 )

[node name="raycast" type="Node2D" parent="."]

[node name="floor" type="RayCast2D" parent="raycast"]
position = Vector2( 20, 32 )
enabled = true
cast_to = Vector2( 0, 5 )

[node name="timer" type="Node2D" parent="."]

[node name="delay_idle" type="Timer" parent="timer"]
wait_time = 0.7
one_shot = true

[node name="particles" type="Node2D" parent="."]
position = Vector2( 0, 1.41581 )

[node name="die" type="Particles2D" parent="particles"]
position = Vector2( 0, 10 )
emitting = false
amount = 12
one_shot = true
speed_scale = 5.0
explosiveness = 0.15
randomness = 0.2
process_material = SubResource( 18 )
texture = ExtResource( 5 )

[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="timeout" from="timer/delay_idle" to="." method="_on_delay_idle_timeout"]
